# video-composer-editor

./: .gitignore  README.md  environment.yml
backend/: mcp_server.py  pyproject.toml
backend/app/: db.py  events.py  logbuffer.py  logstore.py  main.py  models.py  settings.py
backend/app/api/: deps.py  export.py  media.py  music.py  people.py  projects.py  settings_api.py  timeline.py  videos.py
backend/app/services/: ai.py  audio_analysis.py  audio_loudness.py  composer.py  faces.py  fcpxml.py  frames.py  gemini.py  jobs.py  lyrics.py  native_picker.py  openai_client.py  pipeline.py  scanner.py  timeline_history.py  timeline_ops.py  xmeml.py
backend/tests/: conftest.py  fake_agy.py  fake_agy.sh  golden_montage.xml  test_ai.py  test_api.py  test_audio_analysis.py  test_composer.py  test_faces.py  test_fcpxml.py  test_frames.py  test_gemini.py  test_lyrics.py  test_migration.py  test_scanner.py  test_timeline_history.py  test_timeline_ops.py  test_xmeml.py
composition/: README.md  composition1.output.json  composition1.prompt  validate_composition.py
docs/: MANUAL.md  PLAN.md  TESTING.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ExcludedPanel.tsx  FileBrowser.tsx  InfoTip.tsx  ScrubThumb.tsx  StarRating.tsx  VideoCard.tsx  VideoDetail.tsx  Waveform.tsx  icons.tsx
frontend/src/lib/: api.ts  sse.ts  types.ts  usePreviewGain.ts  videoFilter.ts
frontend/src/pages/: GuidePage.tsx  HomePage.tsx  LogsPage.tsx  MontagePage.tsx  MusicPage.tsx  NewProjectPage.tsx  PeoplePage.tsx  ReviewPage.tsx  SettingsPage.tsx  SetupPage.tsx
