[project]
name = "video-montage-composer"
version = "0.1.0"
description = "Turn a folder of vacation videos + a song into an Adobe Premiere Pro project, with AI-assisted clip analysis and montage."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Local Whisper lyrics transcription (Settings -> Music analysis).
lyrics = ["faster-whisper>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
